<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">wayd</string>
    <string name="nombre_de_usuario">NOMBRE DE USUARIO</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="whatsapp">whatsapp</string>
    <string name="olvidaste_tu_contraseña">¿Olvidaste tú contraseña?</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="ingresar">INGRESAR</string>
    <string name="logo">logo</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a_two">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="foto_de_pefil">foto_de_pefil</string>
    <string name="barra_diseno">barra_diseno</string>
    <string name="button_register">button_register</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tú contraseña?</string>
    <string name="_three">CORREO</string>
    <string name="registrate_como_profesional">Registrate como profesional</string>
    <string name="mensaje">mensaje</string>
    <string name="cuidad_departamento_pa_s">Cuidad / Departamento / País</string>
    <string name="profesi_n">Profesión</string>
    <string name="nombre_amp_apellido"><![CDATA[Nombre & Apellido]]></string>
    <string name="llamar">llamar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="olvidaste_t_contrase_a">¿Olvidaste tú contraseña?</string>
    <string name="correo_forget_password">CORREO</string>
    <string name="enviar">Enviar</string>
    <string name="trabaja_a_tu_ritmo">trabaja a tu ritmo</string>
    <string name="contrata_de_manera_segura">contrata de manera segura</string>
    <string name="reg_strate_como_empresa">Regístrate como Empresa</string>
</resources>