<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:orientation="vertical"
    android:layout_marginVertical="200dp"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidaste_t_contrase_a"
        android:layout_marginVertical="10sp"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/purple_700"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="5sp"
        android:ems="10"
        android:hint="@string/correo_forget_password"
        android:background="@drawable/drawable_circular_button_two"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textEmailAddress"
        android:paddingStart="25dp"
        android:paddingTop="5dp"
        android:textColor="@color/silver"
        android:textColorHint="@color/silver"
        android:textSize="17sp"
        android:paddingLeft="25dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="@string/correo" />

    <Button
        android:onClick="send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="15sp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/drawable_circular_button"
        android:text="@string/enviar"
        tools:ignore="UsingOnClickInXml" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true" />


</androidx.appcompat.widget.LinearLayoutCompat>