<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:theme="@style/toolbarthese"
        >
    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/silvertwo"
        app:buttonGravity="top|center_vertical"
        app:theme="@style/toolbarthesesilver"
        android:text="@string/crear_cuenta"
        app:titleTextColor="@color/purple_700"
        >
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/drawable_profile_blue"
            android:layout_gravity="center"

            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/nombre_amp_apellido"
            android:textSize="20sp"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="15sp"
            android:text="@string/profesi_n"
            android:textColor="@color/purple_700"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/drawable_circular_button_blue"
            android:fontFamily="@font/montserrat_regular"
            android:paddingTop="5dp"
            android:text="@string/cuidad_departamento_pa_s"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_circular_button_small"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/mensaje"
                android:textSize="12sp"
                android:textColor="@color/purple_700"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_circular_button_small"
                android:text="@string/llamar"
                android:textSize="12sp"
                android:textColor="@color/purple_700"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_circular_button_small"
                android:text="@string/correo"
                android:textSize="12sp"
                android:textColor="@color/purple_700" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="304dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_circular_button_square"
                    app:srcCompat="@drawable/drawable_profile_button_study" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_circular_button_square"
                    app:srcCompat="@drawable/drawable_profile_button_experience" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_circular_button_square"
                    app:srcCompat="@drawable/drawable_profile_button_jobs" />

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_circular_button_square"
                    app:srcCompat="@drawable/drawable_profile_button_social_media" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
